# Seed-Vault

./: .gitignore  .seed-vault-framework  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SPEC.md  Vault_Inspo.txt  bootstrap.sh  pyproject.toml  update_vault_framework.sh
.claude/: settings.json
.claude/skills/: vault-compile.md  vault-digest.md  vault-index.md  vault-ingest.md  vault-lint.md  vault-migrate.md  vault-pipeline.md  vault-qa.md  vault-verify.md  vault-visualize.md
.github/workflows/: ci.yml
.obsidian/: app.json  core-plugins.json  graph.json
_seeds/: install.sh  migrate.py
_seeds/seed-compile/: SKILL.md
_seeds/seed-digest/: SKILL.md
_seeds/seed-index/: SKILL.md
_seeds/seed-ingest/: SKILL.md
_seeds/seed-lint/: SKILL.md
_seeds/seed-migrate/: SKILL.md
_seeds/seed-pipeline/: SKILL.md
_seeds/seed-qa/: SKILL.md
_seeds/seed-verify/: SKILL.md
_seeds/seed-visualize/: SKILL.md
_templates/: concept.md  source-summary.md  visualization.md
_vault/: install.sh  manifest.txt  migrate.py
_vault/agents/: SPEC.md  qa-responder.md  (+4 more)
docs/: Architecture.md  Article-Frontmatter.md  Home.md  LLM-Frontends.md  Obsidian-Setup.md  Updating-Your-Vault.md
tests/: conftest.py  test_agents.py  test_bootstrap.py  test_convert.py  test_digest.py  test_e2e_pipeline.py  test_e2e_update.py  test_frontmatter.py  test_index_generator.py  test_lint_cli.py  test_local_ingest.py  test_migrate_version.py  test_migrations.py  test_pipeline.py  test_summary_scaffold.py  test_verify.py  test_viz.py
wiki/: _catalog.base  _catalog.md  _index.base  _index.md  _log.md
(+31 files in other folders)
