[project]
name = "seed-vault"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = [
    "opendataloader-pdf>=2.0",
    "pypandoc>=1.14",
    "python-frontmatter>=1.1",
    "thefuzz>=0.22",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_pandoc: test needs the pandoc binary on PATH (real document conversion)",
    "requires_qmd: test needs the qmd CLI installed (real search indexing)",
    "local: test runs against real, gitignored articles in tests/local/raw (skipped when absent)",
]
